# tech-radar

./: .editorconfig  .pre-commit-config.yaml  Justfile  README.md  sonar-project.properties
.github/: copilot-instructions.md  dependabot.yml
.github/actions/setup-tests-dependencies/: action.yml
.github/other-configurations/: labeler.yml  labeller.yml  labels.yml
.github/tool-configurations/: labeller.yml
.github/workflows/: check-spellings.yml  clean-caches.yml  code-checks.yml  code-quality.yml  dependency-review.yml  deploy.yml  pull-request-checks.yml  pull-request-tasks.yml  sync-labels.yml
docs/: PROJECT_TECHNOLOGIES.md  SECURITY.md
githooks/: pre-commit
github-pages/: config.json  dark-mode.css  index.html  radar.css
tests/: .gitignore  config.schema.json  pyproject.toml  tests.just
tests/schema/: config.schema.json
tests/ui/: generate_snapshot.py  test_tech_radar.py
tests/ui/__snapshots__/: tech-radar-home.aria
