
[project]
name = "tests"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies= [
  "check-jsonschema==0.34.1",
  "greenlet==3.2.4",
  "playwright==1.55.0",
  "pytest-playwright==0.7.1",
  "pytest-rerunfailures==16.1",
  "pytest==8.4.2",
  "ruff==0.14.0",
  "ty==0.0.1a22",
  "vulture==2.14",
]

[tool.uv]
required-version = "~=0.9.0"
package = false

[tool.setuptools]
py-modules = ["ui", "schema_validation"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["E501"]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "N999",    # Ignore invalid module name
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.vulture]
ignore_names = []
